# DDW-Character-Builder

./: README.md  TODO.md  package-lock.json  package.json
data/: classes_SRD.json  lineages.json  lineages_SRD.json  test.json
src/: App.svelte  stores.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Choice_Class.svelte  Choice_Lineage.svelte  Class.svelte  Description.svelte  End.svelte  Equipment.svelte  Landing.svelte  Lineage.svelte  Menu.svelte  Scores.svelte
