[package]
name = "ddw-character-builder"
version = "0.0.1"
description = "A fully-fledged character creation utility for DnDWithin"
authors = ["CyprienGille"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-open", "dialog-save"] }
tauri-cli = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
